fix profile items width on mobile

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -63,8 +63,11 @@
   top: 41%;
   left: 35.2%;
   display: none;
+  border: none;
 }
 .profile__name {
+  max-width: 350px;
+  word-wrap: break-word;
   font-weight: 500;
   font-size: 42px;
   color: var(--white);
@@ -104,9 +107,14 @@
   cursor: pointer;
 }
 
-@media (max-width: 880px) {
+@media (max-width: 890px) {
   .profile {
     padding: 40px 15px;
+  }
+}
+@media (max-width: 750px) {
+  .profile__name {
+    max-width: 240px;
   }
 }
 @media (max-width: 620px) {
@@ -126,6 +134,7 @@
   }
   .profile__avatar-wrapper {
     margin-bottom: 25px;
+    column-gap: 15px;
   }
   .profile__info {
     margin-bottom: 36px;
